# metrocity

./: Cargo.toml  LICENSE  README.md
aur/: .SRCINFO  PKGBUILD
src/: config.rs  engine.rs  kitty.rs  main.rs  scene.rs  sprite.rs  theme.rs
src/scenes/: mod.rs
src/scenes/cafe/: background.rs  cat.rs  layout.rs  mod.rs  paint.rs  palette.rs
src/scenes/cafe/components/: counter_props.rs  lamp.rs  menu.rs  mod.rs  neon.rs  pastry_case.rs  shelves.rs  signboard.rs  stools.rs  terminal.rs  window.rs
src/scenes/cafe/sprites/: cats.rs  decor.rs  mod.rs
src/scenes/city/: THIRD-PARTY-NOTICES.md  buildings.rs  logos.rs  mod.rs  people.rs  utils.rs  vehicles.rs  weather.rs
src/scenes/meadow/: background.rs  layout.rs  mod.rs  paint.rs  palette.rs
src/scenes/meadow/components/: birds.rs  blanket.rs  cabin.rs  clouds.rs  leaves.rs  mod.rs  shadows.rs  sunflowers.rs  tree.rs
src/scenes/meadow/sprites/: animals.rs  decor.rs  mod.rs
src/scenes/sakura/: background.rs  layout.rs  mod.rs  paint.rs  palette.rs  petals.rs  tree.rs
src/scenes/sakura/components/: ground.rs  lake.rs  lantern.rs  mod.rs  skyline.rs  torii.rs
src/scenes/sakura/sprites/: fox.rs  lantern.rs  mod.rs  panda.rs
src/shell/: bash.rs  fish.rs  mod.rs  zsh.rs
tools/: gen_meadow_sprites.py  requirements.txt
