[package]
name = "metrocity"
version = "0.1.1"
edition = "2021"
rust-version = "1.88.0"
description = "A terminal screensaver with animated pixel-art scenes that activate on idle"
license = "MIT"
repository = "https://github.com/Itz-Agasta/metrocity"
homepage = "https://github.com/Itz-Agasta/metrocity"
readme = "README.md"
keywords = ["screensaver", "terminal", "tui", "ratatui", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "metrocity"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
base64 = "0.22"
png = "0.18"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
